fixed background on mobile

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 <body>
 
   <main>
-    <div class="overlay">
-      <img src="./images/bg-header-desktop.png" alt="">
+    <div class="overlay desktop">
+      <img src="./images/bg-header-desktop.png" alt="" class="">
+    </div>
+    <div class="overlay mobile">
+      <img src="./images/bg-header-mobile.png" alt="" class="">
     </div>
     <div class="wrapper container">
       <div class="logo">
